feat: add max-length validation for player names